--- a/index.html
+++ b/index.html
@@ -49,30 +49,35 @@
          </section>
 
        
-<div class="container">
+
     <!-- Преимущества -->
          <section class="sections">
+            <div class="container">
            <!-- <h2 class="section-nav">Преимущества</h2> -->
              <ul  class="advantages-list">
-                 <li> 
+            <li class="advantages-text"> 
                      <h3 class="section-title">Внимание к деталям</h3>
                      <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                 </li>
-                <li>
+                    </li>
+
+            <li class="advantages-text">
                     <h3 class="section-title">Пунктуальность</h3>
                     <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
+             </li>
+
+            <li class="advantages-text">
                     <h3 class="section-title">Планирование</h3>
                     <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+
+            <li class="advantages-text">
                     <h3 class="section-title">Современные технологии</h3>
                     <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
+            </li>
              </ul>
+            </div>
          </section>
-</div>
+
          <!-- Примеры работ -->
 <div class="container">
          <section class="features"> 
@@ -105,30 +110,38 @@
                  <img src="./images/portrait1.jpg"
                  alt="Игорь Демьяненко"
                  width="270">
-               <h3 class="team-item">Игорь Демьяненко</h3>
-               <p class="team-text">Product Designer</p>
-               </li>
+             <div class="team-desc">
+                <h3 class="team-item">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+             </div>
+            </li>
                <li class="team-box">
                    <img src="./images/portrait2.jpg"
                     alt="Ольга Репина"
                     width="270">
-               <h3 class="team-item">Ольга Репина</h3>
-               <p class="team-text">Frontend Developer</p>
-               </li>
+             <div class="team-desc">
+                <h3 class="team-item">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+             </div>
+            </li>
                <li class="team-box">
                    <img src="./images/portrait3.jpg"
                     alt="Николай Тарасов"
                     width="270">
-               <h3 class="team-item">Николай Тарасов</h3>
-               <p class="team-text">Marketing</p>
+             <div class="team-desc">
+                <h3 class="team-item">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+             </div>
                </li>
                <li class="team-box">
                    <img src="./images/portrait4.jpg"
                     alt="Михаил Ермаков"
                     width="270">
-               <h3 class="team-item">Михаил Ермаков</h3>
-               <p class="team-text">UI Designer</p>
-               </li>
+             <div class="team-desc">
+                <h3 class="team-item">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+            </div>
+            </li>
                </ul>
              </section>
             </div>
