--- a/portfolio.html
+++ b/portfolio.html
@@ -60,74 +60,101 @@
     <li class="flex-item">
         <a href=""><img src="./images/portfolio1.jpg" 
         alt="Технокряк"
-        width="370">
+        width="100%">
+    <div class="card-set">
         <h2 class="portfolio-text">Технокряк</h2>
         <p class="portfolio-item">Веб-сайт</p>
-        </a>
+    </div>
+    </a>
+
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio2.jpg"
          alt="Постер New Orlean vs Golden Star"
-         width="370">
+         width="100%">
+    <div class="card-set">
         <h2 class="portfolio-text">Постер New Orlean vs Golden Star</h2>
         <p class="portfolio-item">Дизайн</p>
-        </a>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio3.jpg"
          alt="Ресторан Seafood"
-         width="370">
+         width="100%">
+    <div class="card-set">
         <h2 class="portfolio-text">Ресторан Seafood</h2>
         <p class="portfolio-item">Приложение</p>
-        </a>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio4.jpg"
          alt="Проект Prime"
-         width="370">
+         width="100%">
+    <div class="card-set">
         <h2 class="portfolio-text">Проект Prime</h2>
         <p class="portfolio-item">Маркетинг</p>
-        </a>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio5.jpg"
          alt="Проект Boxes"
-         width="370">
+         width="100%">
+    <div class="card-set">
         <h2 class="portfolio-text">Проект Boxes</h2>
         <p class="portfolio-item">Приложение</p>
-        </a>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
     <a href=""><img src="./images/portfolio6.jpg"
       alt="Inspiration has no Borders"
-      width="370">
-      <h2 class="portfolio-text">Inspiration has no Borders</h2>
+      width="100%">
+    <div class="card-set">
+        <h2 class="portfolio-text">Inspiration has no Borders</h2>
         <p class="portfolio-item">Веб-сайт</p>
-        </a>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio7.jpg"
          alt="Издание Limited Edition"
-         width="370">
+         width="100%">
+    <div class="card-set">
          <h2 class="portfolio-text">Издание Limited Edition</h2>
-        <p class="portfolio-item">Дизайн</p>
-        </a>
+         <p class="portfolio-item">Дизайн</p>
+    </div>    
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio8.jpg" 
         alt="Проект LAB"
-        width="370">
-        <h2 class="portfolio-text">Проект LAB</h2>
-        <p class="portfolio-item">Маркетинг</p>
-        </a>
+        width="100%">
+     <div class="card-set">
+         <h2 class="portfolio-text">Проект LAB</h2>
+         <p class="portfolio-item">Маркетинг</p>
+    </div>
+    </a>
     </li>
+
     <li class="flex-item">
         <a href=""><img src="./images/portfolio9.jpg" 
         alt="Growing Business"
-        width="370">
-        <h2 class="portfolio-text">Growing Business</h2>
-        <p class="portfolio-item">Приложение</p>
-        </a>
+        width="100%">
+    <div class="card-set">
+         <h2 class="portfolio-text">Growing Business</h2>
+         <p class="portfolio-item">Приложение</p>
+    </div>    
+    </a>
     </li>
 </ul>
 </div>
